changed language of project to English

--- a/mailing/templates/mailing/home.html
+++ b/mailing/templates/mailing/home.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 
 
-{% block title %} Главная {% endblock %}
+{% block title %} Home {% endblock %}
 
 {% block content %}
 
 <div class="container text-center">
     <ul class="list-group">
-        <li class="list-group-item"><h3>Количество рассылок:</h3> <h4 class="text-info bg-dark">{{ all_mailings }}</h4>
+        <li class="list-group-item"><h3>Total mailings:</h3> <h4 class="text-info bg-dark">{{ all_mailings }}</h4>
         </li>
 
-        <li class="list-group-item"><h3>Активных рассылок:</h3> <h4 class="text-info bg-dark">{{ launched_mailings }}</h4></li>
+        <li class="list-group-item"><h3>Active mailings:</h3> <h4 class="text-info bg-dark">{{ launched_mailings }}</h4></li>
 
-        <li class="list-group-item"><h3>Количество уникальных получателей:</h3> <h4 class="text-info bg-dark">{{ unique_receivers }}</h4></li>
+        <li class="list-group-item"><h3>Total unique mail receivers:</h3> <h4 class="text-info bg-dark">{{ unique_receivers }}</h4></li>
 
     </ul>
 </div>
