--- a/mailing/templates/mailing/mail_receiver/mail_receivers_list.html
+++ b/mailing/templates/mailing/mail_receiver/mail_receivers_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Все получатели {% endblock %}
+{% block title %} All mail receivers {% endblock %}
 
 {% block content %}
 
@@ -13,10 +13,10 @@
     <div class="col">
     <div class="card">
     <div class="card-body">
-      <h5 class="card-title"><span class="badge text-bg-primary">Ф.И.О:</span> {{ mail_receiver.full_name }}</h5>
+      <h5 class="card-title"><span class="badge text-bg-primary">Full name:</span> {{ mail_receiver.full_name }}</h5>
       <p class="card-text"><span class="badge text-bg-info">Email: </span> {{ mail_receiver.email }}</p>
-      <p class="card-text"><span class="badge text-bg-secondary">Комментарий:</span> <small class="text-body-secondary">{{ mail_receiver.comment|truncatechars:100 }}</small></p>
-        <a href="{% url 'mailing:mail-receiver-detail' mail_receiver.pk %}" class="btn btn-primary">Посмотреть</a>
+      <p class="card-text"><span class="badge text-bg-secondary">Comment:</span> <small class="text-body-secondary">{{ mail_receiver.comment|truncatechars:100 }}</small></p>
+        <a href="{% url 'mailing:mail-receiver-detail' mail_receiver.pk %}" class="btn btn-primary">Open</a>
         {% if perms.mailing.view_mailreceiver %}
         <div class="card-footer">
             Created by: <a href="{% url 'users:user-profile' mail_receiver.owner.pk %}">{{mail_receiver.owner}}</a>
