--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -3,10 +3,10 @@
 {% block title %} Register {% endblock %}
 
 {% block content %}
-<h2>Регистрация</h2>
+<h2>Registration</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Зарегистрироваться</button>
+    <button type="submit">Signup</button>
 </form>
 {% endblock %}
