--- a/mailing/templates/mailing/mail_receiver/mail_receiver_form.html
+++ b/mailing/templates/mailing/mail_receiver/mail_receiver_form.html
@@ -1,23 +1,23 @@
 {% extends "base.html" %}
 
-{% block title %}Получатель{% endblock %}
+{% block title %}Mail receiver{% endblock %}
 
 {% block content %}
 
 <div class="card mb-4 box-shadow">
     <div class="card-header">
         {% if mail_receiver %}
-        <h4 class="my-0 font-weight-normal">Редактирование Получателя</h4>
+        <h4 class="my-0 font-weight-normal">Edit receiver</h4>
         {% else %}
-        <h4 class="my-0 font-weight-normal">Добавление Получателя</h4>
+        <h4 class="my-0 font-weight-normal">Add receiver</h4>
         {% endif %}
     </div>
     <div class="card-body">
         <form method="post" action="" class="form-floating" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Сохранить получателя</button>
-            <a href="{% url 'mailing:home' %}" class="btn btn-secondary">Отмена</a>
+            <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Save receiver</button>
+            <a href="{% url 'mailing:home' %}" class="btn btn-secondary">Cancel</a>
         </form>
     </div>
 </div>
