--- a/mailing/templates/mailing/mailing_attempts_list.html
+++ b/mailing/templates/mailing/mailing_attempts_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Все Попытки Рассылки {% endblock %}
+{% block title %} All mailings attempts {% endblock %}
 
 {% block content %}
 
@@ -12,14 +12,14 @@
     {% for attempt in mailing_attempts %}
     <li class="list-group-item">
         <h3>Topic: <a href="{% url 'mailing:message-detail' message.pk %}" class="link">{{ message.title }}</a></h3>
-        <h4>Дата и время: <span class="badge text-bg-secondary">{{ attempt.attempt_at }}</span></h4>
+        <h4>Date and time: <span class="badge text-bg-secondary">{{ attempt.attempt_at }}</span></h4>
         {% if attempt.status == 'Success' %}
-        <h6>Статус: <span class="badge text-bg-success">{{ attempt.status }}</span></h6>
+        <h6>Status: <span class="badge text-bg-success">{{ attempt.status }}</span></h6>
         {% else %}
-        <h6>Статус: <span class="badge text-bg-danger">{{ attempt.status }}</span></h6>
+        <h6>Status: <span class="badge text-bg-danger">{{ attempt.status }}</span></h6>
         {% endif %}
 
-        <h4>Ответ Сервера:</h4>
+        <h4>Server answer:</h4>
         <p class="text-secondary">{{ attempt.server_answer }}</p>
 
     </li>
