--- a/mailing/templates/mailing/mailing_unit/mailing_unit_form.html
+++ b/mailing/templates/mailing/mailing_unit/mailing_unit_form.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
-{% block title %}Рассылка{% endblock %}
+{% block title %}Mailing{% endblock %}
 
 {% block content %}
 
 <div class="card mb-4 box-shadow">
     <div class="card-header">
         {% if mailing_unit %}
-        <h4 class="my-0 font-weight-normal">Изменение Рассылки</h4>
+        <h4 class="my-0 font-weight-normal">Edit Mailing</h4>
         {% else %}
-        <h4 class="my-0 font-weight-normal">Добавление Рассылки</h4>
+        <h4 class="my-0 font-weight-normal">Add mailing</h4>
         {% endif %}
     </div>
     <div class="card-body">
@@ -28,8 +28,8 @@
                 </div>
                 {% endfor %}
             </div>
-            <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Сохранить Рассылку</button>
-            <a href="{% url 'mailing:mailing-units-list' %}" class="btn btn-secondary">Отмена</a>
+            <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Save mailing</button>
+            <a href="{% url 'mailing:mailing-units-list' %}" class="btn btn-secondary">Cancel</a>
         </form>
     </div>
 </div>
