--- a/mailing/templates/mailing/mailing_unit/mailing_units_list.html
+++ b/mailing/templates/mailing/mailing_unit/mailing_units_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Все сообщения {% endblock %}
+{% block title %} All mailings {% endblock %}
 
 {% block content %}
 {% if mailing_units|length == 0 %}
@@ -10,19 +10,19 @@
     {% for mailing_unit in mailing_units %}
     {% if mailing_unit.owner == user or perms.mailing.view_mailingunit%}
     <li class="list-group-item">
-        <h4>Тема: <span class="badge text-bg-secondary">{{ mailing_unit.message }}</span></h4>
+        <h4>Title: <span class="badge text-bg-secondary">{{ mailing_unit.message }}</span></h4>
         {% if mailing_unit.status == 'Launched' %}
-        <h6>Статус: <span class="badge text-bg-success">{{ mailing_unit.status }}</span></h6>
+        <h6>Status: <span class="badge text-bg-success">{{ mailing_unit.status }}</span></h6>
         {% elif mailing_unit.status == 'Created' %}
-        <h6>Статус: <span class="badge text-bg-info">{{ mailing_unit.status }}</span></h6>
+        <h6>Status: <span class="badge text-bg-info">{{ mailing_unit.status }}</span></h6>
         {% else %}
-        <h6>Статус: <span class="badge text-bg-danger">{{ mailing_unit.status }}</span></h6>
+        <h6>Status: <span class="badge text-bg-danger">{{ mailing_unit.status }}</span></h6>
         {% endif %}
         {% if perms.mailing.view_mailingunit %}
         <h6>Created by: <a href="{% url 'users:user-profile' mailing_unit.owner.pk %}">{{mailing_unit.owner}}</a></h6>
         {% endif %}
         <a href="{% url 'mailing:mailing-unit-detail' mailing_unit.pk %}">
-            <button type="button" class="btn btn-lg btn-block btn-outline-info">Посмотреть</button>
+            <button type="button" class="btn btn-lg btn-block btn-outline-info">Open</button>
         </a>
     </li>
     {% endif %}
