--- a/mailing/templates/mailing/message/message_delete.html
+++ b/mailing/templates/mailing/message/message_delete.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 
-{% block title %}Удалить Сообщение{% endblock %}
+{% block title %}Delete message{% endblock %}
 
 {% block content %}
 <body>
 <div class="container mt-5">
-    <h1 class="mb-4">Удалить Сообщение</h1>
-    <p>Вы уверены, что хотите удалить сообщение "{{ message.title }}"?</p>
+    <h1 class="mb-4">Delete message</h1>
+    <p>Are you sure you want to delete message: "{{ message.title }}"?</p>
     <form method="post">
         {% csrf_token %}
-        <button type="submit" class="btn btn-danger">Удалить</button>
-        <a href="{% url 'mailing:home' %}" class="btn btn-secondary">Отмена</a>
+        <button type="submit" class="btn btn-danger">Delete</button>
+        <a href="{% url 'mailing:home' %}" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
 {% endblock %}
