--- a/mailing/templates/mailing/message/message_detail.html
+++ b/mailing/templates/mailing/message/message_detail.html
@@ -6,17 +6,17 @@
 
 <div class="card text-center">
     <div class="card-header">
-        <h5>Тема: {{ message.title }}</h5>
+        <h5>Title: {{ message.title }}</h5>
     </div>
     <div class="card-body">
-        <h5 class="card-title">Текст: </h5>
+        <h5 class="card-title">Body: </h5>
         <p class="text-secondary">{{ message.body }}</p>
         <div class="card-footer">
             <a href="{% url 'mailing:message-update' message.pk %}">
-                <button type="button" class="btn btn-lg btn-block btn-outline-secondary">Редактировать</button>
+                <button type="button" class="btn btn-lg btn-block btn-outline-secondary">Edit</button>
             </a>
             <a href="{% url 'mailing:message-delete' message.pk %}">
-                <button type="button" class="btn btn-lg btn-block btn-outline-danger">Удалить</button>
+                <button type="button" class="btn btn-lg btn-block btn-outline-danger">Delete</button>
             </a>
         </div>
     </div>
