--- a/mailing/templates/mailing/message/messages_list.html
+++ b/mailing/templates/mailing/message/messages_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Все сообщения {% endblock %}
+{% block title %} All messages {% endblock %}
 
 {% block content %}
 
@@ -12,10 +12,10 @@
     <div class="col">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title"><span class="badge text-bg-primary">Тема:</span> {{ message.title }}</h5>
-                <p class="card-text"><span class="badge text-bg-secondary">Текст:</span> <small
+                <h5 class="card-title"><span class="badge text-bg-primary">Tite:</span> {{ message.title }}</h5>
+                <p class="card-text"><span class="badge text-bg-secondary">Body:</span> <small
                         class="text-body-secondary">{{ message.body|truncatechars:100 }}</small></p>
-                <a href="{% url 'mailing:message-detail' message.pk %}" class="btn btn-primary">Посмотреть</a>
+                <a href="{% url 'mailing:message-detail' message.pk %}" class="btn btn-primary">Open</a>
             </div>
         </div>
     </div>
