--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -3,10 +3,10 @@
 {% block title %} Login {% endblock %}
 
 {% block content %}
-<h2>Вход</h2>
+<h2>Login</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Войти</button>
+    <button type="submit">Login</button>
 </form>
 {% endblock %}
