--- a/users/templates/logout.html
+++ b/users/templates/logout.html
@@ -3,10 +3,10 @@
 {% block title %} Logout {% endblock %}
 
 {% block content %}
-<h2> Вы вышли из системы </h2>
-<p>Если хотите войти снова, нажмите на кнопку снизу</p>
+<h2> You logged out </h2>
+<p>If you want to log in again, press the button</p>
 <a href="{% url 'users:login' %}">
-    <button class="btn btn-primary">Войти</button>
+    <button class="btn btn-primary">Login</button>
 </a>
 {% endblock %}
 
