--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -3,10 +3,12 @@
 {% block title %} Register {% endblock %}
 
 {% block content %}
+<div class="col-4">
 <h2>Registration</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Signup</button>
+    <button class="btn btn-primary" type="submit">Signup</button>
 </form>
+    </div>
 {% endblock %}
