--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -3,10 +3,21 @@
 {% block title %} Login {% endblock %}
 
 {% block content %}
-<h2>Login</h2>
+{% if messages %}
+<div class="messages">
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
+
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button class="btn btn-primary" type="submit">Login</button>
+    <p><a href="{% url 'users:reset-password' %}" class="link-secondary">Forgot password?</a></p>
 </form>
+{% include "includes/welcome.html" %}
 {% endblock %}
