--- a/users/templates/logout.html
+++ b/users/templates/logout.html
@@ -3,7 +3,7 @@
 {% block title %} Logout {% endblock %}
 
 {% block content %}
-<h2> You logged out </h2>
+<h2> You've logged out </h2>
 <p>If you want to log in again, press the button</p>
 <a href="{% url 'users:login' %}">
     <button class="btn btn-primary">Login</button>
