refactored service layer and updated README.md

--- a/users/templates/all_users.html
+++ b/users/templates/all_users.html
@@ -15,9 +15,9 @@
 {% endif %}
 
 <div class="list-group">
-    {% for user in users %}
+    {% for user_profile in users %}
     <li class="list-group-item">
-        <a href="{% url 'users:user-profile' user.pk %}" class="list-group-item list-group-item-action">{{ user.email }}</a>
+        <a href="{% url 'users:user-profile' user_profile.pk %}" class="list-group-item list-group-item-action">{{ user_profile.email }}</a>
         {% if user.is_active %}
         Status: <span class="text-success">Active</span>
         {% else %}
