fixed various bugs

--- a/mailing/templates/mailing/home.html
+++ b/mailing/templates/mailing/home.html
@@ -5,6 +5,7 @@
 
 {% block content %}
 <div class="container text-center">
+    <h3 class="text-primary">Welcome, {{ user }}!</h3>
     <ul class="list-group">
         <li class="list-group-item"><h3>Total mailings:</h3> <h4 class="text-info bg-dark">{{ all_mailings }}</h4>
         </li>
