--- a/mailing/templates/mailing/mail_receiver/mail_receivers_list.html
+++ b/mailing/templates/mailing/mail_receiver/mail_receivers_list.html
@@ -4,6 +4,16 @@
 
 {% block content %}
 
+{% if messages %}
+<div class="messages">
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
+
 <div class="row row-cols-1 row-cols-md-2 g-4">
     {% if mail_receivers|length == 0 %}
     <h4>No mail receivers created</h4>
