--- a/mailing/templates/mailing/mailing_unit/mailing_units_list.html
+++ b/mailing/templates/mailing/mailing_unit/mailing_units_list.html
@@ -3,6 +3,17 @@
 {% block title %} All mailings {% endblock %}
 
 {% block content %}
+
+{% if messages %}
+<div class="messages">
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
+
 {% if mailing_units|length == 0 %}
 <h4>No mailings created</h4>
 {% endif %}
