--- a/users/templates/all_users.html
+++ b/users/templates/all_users.html
@@ -18,7 +18,7 @@
     {% for user_profile in users %}
     <li class="list-group-item">
         <a href="{% url 'users:user-profile' user_profile.pk %}" class="list-group-item list-group-item-action">{{ user_profile.email }}</a>
-        {% if user.is_active %}
+        {% if user_profile.is_active %}
         Status: <span class="text-success">Active</span>
         {% else %}
         Status: <span class="text-danger">Blocked</span>
