--- a/users/templates/user_profile.html
+++ b/users/templates/user_profile.html
@@ -5,8 +5,18 @@
 
 {% block content %}
 
+{% if messages %}
+<div class="messages">
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
+
 <div class="card text-center">
-    {% cache 900 user_profile_header user_profile.pk %}
+    {% cache CACHE_TIMEOUT user_profile_header user_profile.pk %}
     <img src="{{ user_profile.avatar | media_filter }}" class="card-img-top mx-auto"
          style="width: 300px; height: 300px; object-fit: cover;" alt="...">
     <div class="card-header">
@@ -23,7 +33,7 @@
             {% endif %}
         </h5>
         {% endif %}
-        {% cache 900 user_profile_info user_profile.pk %}
+        {% cache CACHE_TIMEOUT user_profile_info user_profile.pk %}
         <ul class="list-group">
             <li class="list-group-item">Country: {{ user_profile.country }}</li>
             <li class="list-group-item">Phone number: {{ user_profile.phone_number }}</li>
